update: about + menu pages added. Many new components

--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,11 @@
 }
 
 .hero {
-    background-color: #495E57;
+    background: linear-gradient(rgba(0, 0, 0, .65), rgba(0, 0, 0, .65)), url('./assets/restaurant.jpg') no-repeat center bottom;
+    background-size: cover;
     align-items: center;
     min-height: 380px;
-    padding-top: 12vh;
+    padding-top: 15vh;
     box-sizing: content-box;
 }
 
@@ -32,7 +33,6 @@
     padding: 10% 0;
 }
 
-.hero-content-container h1,
 .hero-content-container h2,
 .hero-cta {
     flex-grow: 1;
@@ -88,10 +88,10 @@
 
 .testimonials-list-container {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     gap: 24px;
 }
+
 
 .about {margin: 10vh 0 11vh 0;}
 .about-flex {
