--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,14 +1,25 @@
-@import '../App.css';
-@import '../assets/arrow.png'
-
 
 /* root and all *selectors rules */
-*, *::after, *::before { box-sizing: border-box;}
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+@media screen and (max-width: 768px) {
+    *, *::after, *::before {
+        box-sizing: border-box;
+    }
+
+    * {
+        margin: 0;
+        padding: 0;
+    }
 }
 
 body, html { height: 100%; font-size: 16px;}
@@ -87,24 +98,29 @@ h2 {
 header {
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    z-index: 100;
+    z-index: 10;
+    height: 5rem;
+    background-color: rgba(1, 1, 1, .35);
+    width: 100vw;
 }
 
 /* NAV */
 nav ul {
     list-style: none;
-    z-index: 20;
-    display: flex;
-    flex-flow: row wrap;
+    flex-wrap: wrap;
+    z-index: 100;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
 }
 
 nav li {
-    padding: 1.75rem;
     text-align: center;
     font-size: 1rem;
     margin: 0 auto;
+    padding: 0 2rem;
 }
 
 nav p {
@@ -114,3 +130,47 @@ nav p {
 }
 
 nav a {text-decoration: none;}
+
+.hamburger {
+    position: fixed;
+    top: 1.25rem;
+    left: 2rem;
+    z-index: 999;
+}
+.hamburger button {
+    background-color: #f4ce14;
+    padding: .25rem .6rem;
+    border: none;
+    font-size: 1.5rem;
+    border-radius: .1rem;
+    transition: all .2s ease-in;
+}
+.hamburger button:hover {
+    background-color: wheat;
+}
+
+@media screen and (min-width: 768px) {
+    .hamburger { display: none;}
+}
+
+@media screen and (max-width: 768px) {
+    header {
+        justify-content: space-around;
+    }
+    nav ul {
+        background-color: white;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+    }
+    nav ul li {
+        flex: 1;
+        padding: 1rem 0;
+    }
+    nav ul li p {
+        color: black;
+    }
+}
