--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -165,10 +165,11 @@ nav a {text-decoration: none;}
         right: 0;
         display: flex;
         flex-direction: column;
+        min-height: 100%;
+        padding-top: 5rem;
     }
     nav ul li {
         flex: 1;
-        padding: 1rem 0;
     }
     nav ul li p {
         color: black;
