--- a/src/Pages/OrderOnlinePage.css
+++ b/src/Pages/OrderOnlinePage.css
@@ -38,7 +38,7 @@ span { color: rgb(244, 206, 20) }
 
 .quoteContainer {
     width: 60vw;
-    margin: 5rem auto;
+    margin: 8rem auto 10rem auto;
     font-style: italic;
 }
 
