--- a/src/components/MenuComponents/MenuList.css
+++ b/src/components/MenuComponents/MenuList.css
@@ -12,7 +12,7 @@
 }
 
 .MenuListItem {
-    border-bottom: 1px solid #EE9972;
+    border-bottom: 1px solid rgba(0, 70, 67, 1);
     margin-bottom: 2rem;
     text-align: left;
 }
