--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -22,7 +22,14 @@
     }
 }
 
-body, html { height: 100%; font-size: 16px;}
+body, html {
+    height: 100%;
+    font-size: 16px;
+    color: #0c1618;
+    cursor: default;
+    background-color: rgb(255, 255 , 250);
+    font-family: 'Karla', Arial, Helvetica, sans-serif;
+}
 
 :root {
     --bigHeading: 5.5rem;
@@ -36,7 +43,8 @@ body, html { height: 100%; font-size: 16px;}
 
 /* FONT VARIABLES (GLOBAL)*/
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Markazi Text', serif;
+    /* font-family: 'Markazi Text', serif; */
+    font-family: 'Karla', Arial, Helvetica, sans-serif;
     line-height: 1;
 }
 
@@ -102,8 +110,9 @@ header {
     align-items: center;
     z-index: 10;
     height: 5rem;
-    background-color: rgba(1, 1, 1, .35);
+    background-color: transparent;
     width: 100vw;
+    box-shadow: 0 0 6px 0px #000;
 }
 
 /* NAV */
@@ -114,16 +123,18 @@ nav ul {
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
+    gap: 2.25rem;
 }
 
 nav li {
     text-align: center;
     font-size: 1rem;
     margin: 0 auto;
-    padding: 0 2rem;
+    padding: 0 3rem;
 }
 
 nav p {
+    font-size: 1.5rem;
     text-transform: uppercase;
     font-weight: bold;
     color: white;
@@ -138,7 +149,8 @@ nav a {text-decoration: none;}
     z-index: 999;
 }
 .hamburger button {
-    background-color: #f4ce14;
+    background-color: rgba(0, 70, 67, 1);
+    color:rgb(255, 255 , 255);
     padding: .25rem .6rem;
     border: none;
     font-size: 1.5rem;
@@ -146,7 +158,7 @@ nav a {text-decoration: none;}
     transition: all .2s ease-in;
 }
 .hamburger button:hover {
-    background-color: wheat;
+    background-color: rgba(0, 70, 67, .75);
 }
 
 @media screen and (min-width: 768px) {
